fix improperly aligned arrows on dropdowns and tooltips

--- a/scss/helpers/_mixins.scss
+++ b/scss/helpers/_mixins.scss
@@ -70,8 +70,8 @@
 
 // These values calculate a consistent arrow fill (inner) and arrow border (outer),
 // given any value of $arrow-size from _config.scss
-$arrow-fill-position: $arrow-size * -2;
-$arrow-border-position: $arrow-size * -2 - 1px;
+$arrow-fill-position: $arrow-size * -2 + 1px;
+$arrow-border-position: $arrow-size * -2 - 0.5px;
 
 @mixin arrow-base {
   content: "";
